Pull request #107: WDZO-1336: application code in sidebar is no longer always highlighted
Squashed commit of the following:

commit b6560a0c41259cbcec373392b3b47b418871a716
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Tue Jan 26 09:20:52 2021 +0300

    WDZO-1336: application code in sidebar is no longer always highlighted

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -39,6 +39,7 @@
     margin-right: 10px;
 }
 
+body:not(:global(.not_highlight_app)) .activeApp,
 .active {
     color: #09a552 !important;
     background-color: #f8f8f8;
@@ -80,6 +81,11 @@
 
 .menu :global(.ant-menu-item::after) {
     border: none;
+}
+
+.menu :global(.ant-menu-item-selected) {
+    color: #09A552 !important;
+    background-color: #F8F8F8 !important;
 }
 
 .menu :global(.ant-menu-item:hover) {
